<?xml version="1.0"?>
<package format="3">
  <name>slamware_sdk</name>
  <!-- <version>2.6.7</version> -->
  <version>2.0.0</version>
  <description>The slamware_sdk package</description>

  <maintainer email="ros@slamtec.com">Slamtec Ros Maintainer</maintainer>
  <license>BSD</license>
  <url type="website">http://developer.slamtec.com/docs/slamware/ros-sdk/2.6.0_rtm/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
